--- a/src/components/analyze/aq-analyze-backtest-detail.html
+++ b/src/components/analyze/aq-analyze-backtest-detail.html
@@ -8,7 +8,7 @@
 <link rel="import" href="../common/aq-loading-progress.html">
 <link rel="import" href="../common/aq-allpage-layout.html">
 
-<dom-module id="aq-analyze-detail">
+<dom-module id="aq-analyze-backtest-detail">
 	
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
@@ -21,7 +21,9 @@
 	  	 	<template is='dom-if' if='{{!loading}}'>
 			    <aq-allpage-layout header="Backtest Detail" current-path=[[currentPath]]>
 			  		<div class="internal-content">
-				      	<aq-backtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" index="{{index}}"></aq-backtest-detail-item>
+				      	<aq-backtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" heading="[[heading]]"></aq-backtest-detail-item>
+
+				      	<!--aq-forwardtest-detail-item loading="{{loading}}" backtest-id="[[backtestId]]" index="{{index}}"></aq-forward-detail-item-->
 	      			</div>
       			</aq-allpage-layout>
       		</template>
@@ -29,7 +31,7 @@
 
 	<script>
 		Polymer ({
-			is:'aq-analyze-detail',
+			is:'aq-analyze-backtest-detail',
 			
 			properties:{
 				strategyId:String,
@@ -41,9 +43,9 @@
 					type:Boolean,
 					value:false,
 				},
-				index:{
-					type:String
-				},
+
+				heading: String, 
+
 				currentPath: {
 					type: Array,
 					value: ["Home", "Research", "All Strategies", "All Backtests", "Backtest Detail"]
@@ -56,6 +58,7 @@
 			},
 
 			attached: function() {
+				console.log(this.heading);
 				if(!this.$.authItem.checkHasToken()) {
          	 		this.fire('rt-changed',{route:'/user/signin'});
 	          		return;
