--- a/src/components/common/aq-icon-expandable-search.html
+++ b/src/components/common/aq-icon-expandable-search.html
@@ -66,11 +66,11 @@
             
             <div class="flex"></div>
             
-            <template is='dom-if' if='[[icon]]'>
+            <template is='dom-if' if='[[hasIcon]]'>
             	<paper-icon-button class$="[[computeSearchClass(active)]]" icon="aq-icons:search" on-tap="onSearch"></paper-icon-button>
             </template>
 
-         	<template is='dom-if' if='[[!icon]]'>
+         	<template is='dom-if' if='[[!hasIcon]]'>
             	<paper-button noink class$="[[computeSearchClass(active)]]"  on-tap="onSearch">Search</paper-button>
             </template>
 
@@ -88,10 +88,12 @@
 					value: false,
 				},
 
-				icon: {
+				hasIcon: {
 					type: Boolean,
 					value: false,
-				}
+				},
+
+				searchText: String,
 			},
 
 			onBlur: function() {
@@ -101,18 +103,15 @@
 			},
 
 			onSearch: function() {
-				if(this.active){
-
+				if(this.active) {
+					this.fire('search-action',{searchText: this.searchText});
 				} else {
 					this.active = true;
 				}
-				
-				//this.$$('paper-icon-button').style.display = 'none';
+
 			},
 
 			computeSearchClass: function(active) {
-				
-				console.log(active);
 				if (active) {
 					return "active";
 				} else {
@@ -126,7 +125,9 @@
                 if (e.keyCode === 27) {
                     
                 	if(this.$$('#searchbox').value != "") {
-                		this.$$('#searchbox').value = ""; 	
+                		this.$$('#searchbox').value = "";
+                		this.searchText = "";
+                		this.debounce('search', this.onSearch, 50); 	
                 	} else {
                 		this.active = false;
 						this.$$('#searchbox').blur();	
