--- a/src/components/common/backtest/aq-backtest-metric-item-list.html
+++ b/src/components/common/backtest/aq-backtest-metric-item-list.html
@@ -15,8 +15,8 @@
 		#header {
 			margin-top: 20px;
 			margin-bottom: 5px;
-			font-size: 14px;
-			font-weight: 700;
+			font-size: 16px;
+			--font-weight: 700;
 		}
 
 	</style>
