--- a/src/components/common/backtest/aq-backtest-metric-item.html
+++ b/src/components/common/backtest/aq-backtest-metric-item.html
@@ -4,7 +4,7 @@
 	<template>
 		<style>
 			:host{
-				color:#555555;
+				color:#3c3c3c;
 				display: inline-block;
 				font-family: 'Lato', sans-serif;
 				font-size: 16px;
@@ -17,7 +17,7 @@
 			}
 			.text-content{
 				font-weight: 400;
-				font-size: var(--aq-backtest-metric-item-text-content-font-size, 14px);
+				font-size: var(--aq-backtest-metric-item-text-content-font-size, 20px);
 			}
 			.li-container {
 				text-align: left;
